<resources>
    <string name="app_name">auto_template</string>
    <string name="title_activity_recycler_adapter">RecyclerAdapter</string>
    <string name="Setting_Title">Setting</string>
    <string name="privacy_management">개인정보 관리</string>
    <string name="profile_name_text">홍 길동</string>
    <string name="set_account_text">계정 설정</string>
    <string name="set_profile_text">프로필 변경</string>
    <string name="set_password_text">비밀번호 변경</string>
    <string name="accessibility">접근성</string>
    <string name="floating_Text">플로팅 디스플레이</string>
    <string name="top_display_text">상단바 디스플레이</string>
    <string name="data_text">데이터</string>
    <string name="privacy_management_text">개인정보 관리</string>
    <string name="bookmark_text">북마크</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="startLoginBtn">click to login</string>
    <string name="template">Template</string>
    <string name="template_editor">Template Editor</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>